--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-dom": "^18",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
-    "swiper": "^11.1.12"
+    "swiper": "^11.1.12",
+    "tailwindcss": "^3.4.12"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -24,7 +25,6 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.7",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
 }
