--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.20",
     "next": "14.2.7",
     "react": "^18",
     "react-dom": "^18",
@@ -24,7 +25,7 @@
     "@types/react-slick": "^0.23.13",
     "eslint": "^8",
     "eslint-config-next": "14.2.7",
-    "postcss": "^8",
+    "postcss": "^8.4.47",
     "typescript": "^5"
   }
 }
