--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "engines": {
+    "node": ">=14.0.0"
+  },
   "dependencies": {
     "autoprefixer": "^10.4.20",
     "next": "14.2.7",
@@ -19,7 +22,7 @@
     "tailwindcss": "^3.4.12"
   },
   "devDependencies": {
-    "@types/node": "^20.16.5",
+    "@types/node": "^22.5.5",
     "@types/react": "^18.3.7",
     "@types/react-dom": "^18",
     "@types/react-slick": "^0.23.13",
