--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "engines": {
-    "node": ">=14.0.0"
+    "node": ">=16.x"
   },
   "dependencies": {
     "autoprefixer": "^10.4.20",
