--- a/package.json
+++ b/package.json
@@ -19,9 +19,7 @@
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.1.12",
-    "tailwindcss": "^3.4.12"
-  },
-  "devDependencies": {
+    "tailwindcss": "^3.4.12",
     "@types/node": "^22.5.5",
     "@types/react": "^18.3.7",
     "@types/react-dom": "^18",
@@ -30,5 +28,6 @@
     "eslint-config-next": "14.2.7",
     "postcss": "^8.4.47",
     "typescript": "^5.6.2"
-  }
+  },
+  "devDependencies": {}
 }
