--- a/package.json
+++ b/package.json
@@ -12,22 +12,22 @@
     "node": ">=16.x"
   },
   "dependencies": {
-    "autoprefixer": "^10.4.20",
-    "next": "14.2.7",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-slick": "^0.30.2",
-    "slick-carousel": "^1.8.1",
-    "swiper": "^11.1.12",
-    "tailwindcss": "^3.4.12",
     "@types/node": "^22.5.5",
     "@types/react": "^18.3.7",
     "@types/react-dom": "^18",
     "@types/react-slick": "^0.23.13",
+    "autoprefixer": "^10.4.20",
     "eslint": "^8",
     "eslint-config-next": "14.2.7",
+    "next": "14.2.7",
     "postcss": "^8.4.47",
+    "react": "^18",
+    "react-dom": "^18",
+    "react-icons": "^5.3.0",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1",
+    "swiper": "^11.1.12",
+    "tailwindcss": "^3.4.12",
     "typescript": "^5.6.2"
-  },
-  "devDependencies": {}
+  }
 }
