--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "autoprefixer": "^10.4.20",
     "eslint": "^8",
     "eslint-config-next": "14.2.7",
+    "framer-motion": "^12.23.12",
+    "lucide-react": "^0.542.0",
     "next": "14.2.7",
     "postcss": "^8.4.47",
     "react": "^18",
