Fixed isues upgrade next o

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,8 +10,8 @@
     "skipLibCheck": true,
     "strict": false,
     "esModuleInterop": true,
-    "module": "commonjs",
-    "moduleResolution": "node",
+    "module": "esnext",
+    "moduleResolution": "bundler",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
