--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "engines": {
-    "node": ">=18.x"
+    "node": "18.x"
   },
   "dependencies": {
     "@types/node": "^22.7.4",
@@ -17,7 +17,7 @@
     "@types/react-dom": "^18.3.1",
     "@types/react-slick": "^0.23.13",
     "autoprefixer": "^10.4.20",
-    "eslint": "^8.57.1",
+    "eslint": "^9.14.0",
     "eslint-config-next": "15.0.3",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.542.0",
